# markerlessa

./: .gitignore  README.md  environment.yaml  go_test.ipynb  go_test.py  libreach.py  pyproject.toml
data/: example_coords.csv  example_jacks.csv
src/: dep_funcs.py  go_2livecheck.py  go_data1.py  go_group_figures.py  go_jesssyncdata.py  go_livecheck.py  go_subj_.py  go_subj_20241122.py  go_subj_20250110.py  go_subj_20250121.py  go_test.ipynb  go_test.py  jh_subjects.py  libreach.py  marker2markerless.py  tutorial_homogenous_coordinates.py  zk_subjects.py
