[tool.poetry]
name = "markerlessa"
version = "0.1.0"
description = "markerless motion capture libraries for student projects."
authors = ["jeremy wong <jeremydwong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
pandas = "^2.2.3"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
ipympl = "^0.9.4"
urllib3 = "1.26.15"
pyqt6 = "^6.7.1"
trc-data-reader = "^0.3.4"
statsmodels = "^0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
